@startuml
package "Entities" #FFF {
    class User {
        {field} id: int
        {field} firstname: string
        {field} lastname: string
        {field} email: string
        {field} password: string
        {field} registeredAt: DateTimeInterface
        {field} role: array
        {field} mailAlert: boolean
        {field} avatar: relation
        {field} comments: relation
        {field} favorites: relation
        {field} post: relation
        {field} activate: boolean
        {field} requests: array json
        {field} badges: relation
        {field} postsRead: array json
    }

    class Comment {
        {field} id: int
        {field} content: text
        {field} mail: varchar 255
        {field} commentedAt: dateTimeInterface
        {field} approval: boolean
        {field} post: relation
        {field} user: relation
    }

    class Favorite {
        {field} id: int
        {field} likeAt: dateTimeInterface
        {field} user: relation
        {field} post: relation
    }

    class Post {
        {field} id: int
        {field} title: varchar 255
        {field} slug: varchar 255
        {field} url_image: varchar 255
        {field} excerpt: text
        {field} content: text
        {field} created_at: dateTimeInterface
        {field} modified_at: dateTimeInterface
        {field} user: relation
        {field} ref_description: varchar 255
        {field} tag: relation
        {field} favorites: relation
        {field} comments: relation
        {field} number_of_likes: int
    }

    class Tag {
        {field} id: int
        {field} name: varchar 255
        {field} content: text
        {field} post: relation
        {field} stats: relation
    }

    class Stats {
        {field} id: int
        {field} Tag: relation
        {field} FavoriteCounter: int
        {field} number_of_views: int
        {field} tag: relation
    }

    class Avatar {
        {field} id: int
        {field} url_avatar: varchar 255
        {field} updated_at: dateTimeInterface
        {field} validated: boolean
        {field} user: relation
    }

    class PostImage {
        {field} id: int
        {field} url_post: varchar 255
        {field} updated_at: dateTimeInterface
        {field} post: relation
    }

    class BadgeImage {
            {field} id: int
            {field} url_badge: varchar 255
            {field} updated_at: dateTimeInterface
            {field} badge: relation
        }

    class Badge {
        {field} id: int
        {field} name: varchar 255
        {field} url_image: varchar 255
        {field} action_name: varchar 255
        {field} action_delimiter: string
        {field} user: relation
    }


    User "One" --* "Many" Post : To
    User "One" --* "Many" Comment : To
    User "One" --* "Many" Favorite : To
    User "One" --* "One" Avatar : To

    Favorite "Many" --* "One" Post : To
    Stats "One" --* "One" Tag : To
    Post "Many" --* "Many" Tag : To
    User "Many" --* "Many" Badge : To

    Comment "Many" --* "One" Post : To
}
@enduml
